--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -6,7 +6,7 @@ form#pdm-editor-form
 		div.alert.alert-info#pdm-editor-mode
 
 		button#pdm-edit-position.btn.btn-secondary.btn-block.mb-2.d-none(type="button")
-			i.fa.fa-map-marked.mr-2
+			i.fa.fa-location-dot.mr-2
 			| #{__("Edit location")}
 
 		each field in editors.pdm.fields
