--- a/website/templates/pages/error.pug
+++ b/website/templates/pages/error.pug
@@ -10,7 +10,7 @@ block navbar
 block content
 	div.container
 		h2.mb-2
-			i.fa.fa-exclamation-triangle.mr-2
+			i.fa.fa-triangle-exclamation.mr-2
 			| #{__("Error %s", httpcode)}
 		//- Wide image
 		a(href="/")
