--- a/website/templates/pages/user.pug
+++ b/website/templates/pages/user.pug
@@ -6,10 +6,10 @@ block navbar
 		i.fa.fa-calendar-day(title=__("Currently"))
 		span= __("Currently")
 	a(href="/#statistics")
-		i.fa.fa-chart-bar(title=__("Statistics"))
+		i.fa.fa-chart-column(title=__("Statistics"))
 		span= __("Statistics")
 	a(href="/#data")
-		i.fa.fa-file-download(title=__("Data"))
+		i.fa.fa-file-arrow-down(title=__("Data"))
 		span= __("Data")
 
 
