--- a/website/templates/components/geocoder.pug
+++ b/website/templates/components/geocoder.pug
@@ -1,7 +1,7 @@
 div.input-group#boundary-search-container
 	div.input-group-prepend
 		div.input-group-text#search-bar-symbol
-			i.fa.fa-search
+			i.fa.fa-magnifying-glass
 			div.d-none.spinner-border.text-secondary(role="status" style="height: 16px; width: 16px")
 	input#boundary-search.form-control(type="text" placeholder=__("Search for a place..."))
 
