--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -504,7 +504,8 @@ a.navbar-brand:hover {
 	display: block;
 }
 
-.mapillary-viewer-btn {
+.mapillary-viewer-btn,
+.pnx-full-btn {
 	background: rgba(0, 0, 0, .5);
 	color: white;
 	border: none;
